vlib/v/parser/tests/chan_no_type_fn_arg_err.out
vlib/v/parser/tests/chan_no_type_fn_arg_err.vv:1:12: error: `chan` has no type specified. Use `chan Type` instead of `chan`
    1 | fn takes(c chan) {}
      |            ~~~~
